; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_linux-core.c_uv__hrtime.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_linux-core.c_uv__hrtime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i32, i32 }

@uv__hrtime.fast_clock_id = internal global i32 -1, align 4
@UV_CLOCK_FAST = common dso_local global i64 0, align 8
@CLOCK_MONOTONIC_COARSE = common dso_local global i32 0, align 4
@CLOCK_MONOTONIC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv__hrtime(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca %struct.timespec, align 4
  %5 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @UV_CLOCK_FAST, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %25

9:                                                ; preds = %1
  %10 = load i32, i32* @uv__hrtime.fast_clock_id, align 4
  %11 = icmp eq i32 %10, -1
  br i1 %11, label %12, label %25

12:                                               ; preds = %9
  %13 = load i32, i32* @CLOCK_MONOTONIC_COARSE, align 4
  %14 = call i64 @clock_getres(i32 %13, %struct.timespec* %4)
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %12
  %17 = getelementptr inbounds %struct.timespec, %struct.timespec* %4, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = icmp sle i32 %18, 1000000
  br i1 %19, label %20, label %22

20:                                               ; preds = %16
  %21 = load i32, i32* @CLOCK_MONOTONIC_COARSE, align 4
  store i32 %21, i32* @uv__hrtime.fast_clock_id, align 4
  br label %24

22:                                               ; preds = %16, %12
  %23 = load i32, i32* @CLOCK_MONOTONIC, align 4
  store i32 %23, i32* @uv__hrtime.fast_clock_id, align 4
  br label %24

24:                                               ; preds = %22, %20
  br label %25

25:                                               ; preds = %24, %9, %1
  %26 = load i32, i32* @CLOCK_MONOTONIC, align 4
  store i32 %26, i32* %5, align 4
  %27 = load i64, i64* %3, align 8
  %28 = load i64, i64* @UV_CLOCK_FAST, align 8
  %29 = icmp eq i64 %27, %28
  br i1 %29, label %30, label %32

30:                                               ; preds = %25
  %31 = load i32, i32* @uv__hrtime.fast_clock_id, align 4
  store i32 %31, i32* %5, align 4
  br label %32

32:                                               ; preds = %30, %25
  %33 = load i32, i32* %5, align 4
  %34 = call i64 @clock_gettime(i32 %33, %struct.timespec* %4)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %32
  store i32 0, i32* %2, align 4
  br label %44

37:                                               ; preds = %32
  %38 = getelementptr inbounds %struct.timespec, %struct.timespec* %4, i32 0, i32 1
  %39 = load i32, i32* %38, align 4
  %40 = mul nsw i32 %39, 1000000000
  %41 = getelementptr inbounds %struct.timespec, %struct.timespec* %4, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = add nsw i32 %40, %42
  store i32 %43, i32* %2, align 4
  br label %44

44:                                               ; preds = %37, %36
  %45 = load i32, i32* %2, align 4
  ret i32 %45
}

declare dso_local i64 @clock_getres(i32, %struct.timespec*) #1

declare dso_local i64 @clock_gettime(i32, %struct.timespec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
